# RuWordNet-tools

./: Cargo.toml
src/: cli.yml  main.rs
