[package]
name = "roots_importer"
version = "0.1.0"
authors = ["German Lashevich <german.lashevich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.0", features = ["yaml"]}
env_logger = "0.7.1"
log = "0.4.8"
postgres = "0.17.1"
